fix: the banner shift after the buttons loaded

--- a/site/_scss/blocks/_announcement-banner.scss
+++ b/site/_scss/blocks/_announcement-banner.scss
@@ -8,13 +8,14 @@ announcement-banner[hidden] {
 
 announcement-banner {
   [data-banner-close-btn] {
+    margin: -0.5rem 1rem -0.5rem 0;
     opacity: 0;
+    padding: 0 0.5rem;
     pointer-events: none;
   }
 
   &[active] {
     [data-banner-close-btn] {
-      margin: 0 1rem 0 0;
       opacity: 1;
       pointer-events: auto;
     }
